# langchain-tutorials

./: .gitignore  README.md  pyproject.toml
notebook/basics/: simple_llm_app_with_lcel.ipynb
notebooks/basics/: simple_llm_app_with_lcel.ipynb
notebooks/orchestration/: agent.ipynb
notebooks/tmp/: sandbox.ipynb
