[project]
name = "langchain-tutorials"
version = "0.1.0"
description = "Hands-on LangChain official tutorials."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.2.5",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.3.1",
    "langchain-openai>=0.2.2",
    "langchain>=0.3.2",
    "langgraph>=0.2.53",
    "langgraph-checkpoint-sqlite>=2.0.1",
    "nbstripout>=0.8.1",
    "python-dotenv>=1.0.1",
    "tavily-python>=0.5.0",
]
